--- a/config/deoxys_config.yaml
+++ b/config/deoxys_config.yaml
@@ -2,6 +2,14 @@ PC:
   NAME: "rosie"
   IP: 172.16.0.1
 
+NUC:
+  NAME: "charmander"
+  IP: 172.16.0.1 # on PC as well
+  PUB_PORT: 5556
+  SUB_PORT: 5555
+  GRIPPER_PUB_PORT: 5558
+  GRIPPER_SUB_PORT: 5557
+
 ROBOT:
   IP: 172.16.0.2
 
